[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.dev-dependencies]

[tool.mypy]
exclude = ['template\.py']
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
